Added clean target in examples Makefile.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,5 +3,8 @@ HTML := $(SRC:%.rst=%.html)
 
 all: $(HTML)
 
+clean:
+	rm -rf $(HTML)
+
 %.html: %.rst
 	rst2html.py --template=template.tpl --initial-header-level=2 $< > $@
